Set deployment config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "sanity start",
     "test": "sanity check",
-    "build": "sanity build"
+    "build": "sanity build public -y"
   },
   "keywords": [
     "sanity"
@@ -28,5 +28,7 @@
     "react-dom": "^17.0",
     "sanity-plugin-dark-theme-blue": "^1.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/cli": "^2.0.9"
+  }
 }
