--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.12.0",
-    "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.12.0",
-    "@sanity/default-layout": "^2.12.0",
-    "@sanity/default-login": "^2.11.1",
-    "@sanity/desk-tool": "^2.12.0",
-    "@sanity/production-preview": "^2.2.6",
-    "@sanity/vision": "^2.11.2",
+    "@sanity/base": "^2.31.1",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.31.1",
+    "@sanity/default-layout": "^2.31.1",
+    "@sanity/default-login": "^2.31.1",
+    "@sanity/desk-tool": "^2.31.1",
+    "@sanity/production-preview": "^2.29.3",
+    "@sanity/vision": "^2.31.1",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "sanity-plugin-dark-theme-blue": "^1.0.1"
+    "sanity-plugin-dark-theme-blue": "^1.0.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@sanity/cli": "^2.12.0"
+    "@sanity/cli": "^2.31.1"
   }
 }
